<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context="com.example.android.justjava.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/coffeecupsmall"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:adjustViewBounds="true"
            android:background="@string/logo_image"
            android:scaleType="fitStart">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textfield_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="180dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:fontFamily="@font/droid_sans"
                android:hint="@string/input_name"
                android:inputType="textCapWords"
                android:textColor="#dec49c"
                android:textColorHint="#dec49c"
                android:typeface="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="#000000"
                android:fontFamily="@font/droid_sans_bold"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/heading_toppings"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:typeface="normal" />

            <CheckBox
                android:id="@+id/checkbox_whipped_cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="#dec49c"
                android:fontFamily="@font/droid_sans"
                android:paddingEnd="24dp"
                android:paddingStart="5dp"
                android:text="@string/whipped_cream"
                android:textColor="#dec49c"
                android:textSize="16sp"
                android:typeface="normal" />

            <CheckBox
                android:id="@+id/checkbox_chocolate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="#dec49c"
                android:fontFamily="@font/droid_sans"
                android:paddingEnd="24dp"
                android:paddingStart="5dp"
                android:text="@string/chocolate"
                android:textColor="#dec49c"
                android:textSize="16sp"
                android:typeface="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="#000000"
                android:fontFamily="@font/droid_sans_bold"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/heading_quantity"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:height="48dp"
                    android:background="@drawable/button"
                    android:fontFamily="@font/droid_sans_bold"
                    android:onClick="decrement"
                    android:text="@string/minus_button"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/droid_sans_bold"
                    android:text="@string/number_of_coffees"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:typeface="normal" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/button"
                    android:fontFamily="@font/droid_sans_bold"
                    android:onClick="increment"
                    android:text="@string/plus_button"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:typeface="normal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:background="#000000"
                android:fontFamily="@font/droid_sans_bold"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/heading_order_summary"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/droid_sans"
                android:lineSpacingExtra="10sp"
                android:text=""
                android:textColor="#dec49c"
                android:textSize="16sp"
                android:typeface="normal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:fontFamily="@font/droid_sans_bold"
                android:onClick="submitOrder"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/submit_order_button"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:typeface="normal" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>